футер, секция подписки, прайс, стили

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,2 +1,15 @@
 $backgroundButtonColor:#0F7BFF; 
 $lightBackgroundColor: #F5FCFD;
+$darkBackgroundColor: #0063DD;
+
+
+h2{
+    font-size: 32px;
+    line-height: 40px;
+}
+p {
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 150%;
+    color: #000;
+}
