стили компонента FeatutesComp

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -12,6 +12,11 @@ $darkBackgroundColor: #0063DD;
     font-size: 32px;
     line-height: 40px;
 }
+.bannerH3{
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+}
 p {
     font-weight: 300;
     font-size: 16px;
