--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -24,3 +24,11 @@ p{
     line-height: 150%;
     color: #000;
 }
+@media (min-width: 1700px){
+    .container {
+        max-width: 1645px !important;
+    }
+    .paddingRow{
+        padding: 0 230px;
+    }
+}
